--- a/pokedex.html
+++ b/pokedex.html
@@ -1,12 +1,19 @@
+<!DOCTYPE html>
+<html lang="pt-br">
+<head>
+  <meta charset="UTF-8">
+  <title>PokeDex</title>
+  <link rel="stylesheet" href="./style.css" />
+  <link href="https://fonts.googleapis.com/css?family=Rubik&display=swap" rel="stylesheet" />
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+</head>
+<body>
 
-<body class="box" id="temosquepegar"> 
-
-
+  <div class="container">
+    <h1>Pokedex</h1>
+    <ul data-js="pokedex" class="pokedex"></ul>
+  </div>
+  
+  <script src="./pokedex.js"></script>
 </body>
-
-
-
-
-
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-<script src="pokedex.js"></script>
+</html>
